# speech-to-text

./: README.md  pyproject.toml
src/: main.py
